# docs/swagger.json
@@ -9,11 +9,6 @@
     "paths": {
         "/genres": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Возвращает список всех жанров, хранящихся в базе данных.",
                 "produces": [
                     "application/json"
@@ -104,11 +99,6 @@
         },
         "/genres/search": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Возвращает список жанров, имена которых содержат указанную строку (регистронезависимый поиск).",
                 "produces": [
                     "application/json"
@@ -159,11 +149,6 @@
         },
         "/genres/{id}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Возвращает жанр по ID.",
                 "produces": [
                     "application/json"
